fixed typo in command